--- a/app.yaml
+++ b/app.yaml
@@ -1,13 +1,20 @@
-runtime: php55
-api_version: 1
+runtime: php81
+
+# Opcional: ajusta max_instances según tu necesidad (advertencia de gcloud)
+automatic_scaling:
+  max_instances: 20
+
+# handlers (mantengo los tuyos; deberían seguir funcionando)
 handlers:
 - url: /
   script: index.php
+
 # Serve images as static resources.
 - url: /(.+\.(gif|png|jpg))$
   static_files: \1
   upload: .+\.(gif|png|jpg)$
   application_readable: true
+
 # Serve php scripts.
 - url: /(.+\.php)$
   script: \1
