Actualizar la ruta del script en app.yaml para redirigir a api/index.php

--- a/app.yaml
+++ b/app.yaml
@@ -5,7 +5,7 @@ automatic_scaling:
 
 handlers:
 - url: /
-  script: index.php
+  script: api/index.php
 
 # Serve images as static resources.
 - url: /(.+\.(gif|png|jpg))$
